# devenv-tunnel

./: .gitignore  .ticketry.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
client/crates/cli/: Cargo.toml
client/crates/cli/src/: api_client.rs  auth.rs  autostart.rs  daemon.rs  domains.rs  main.rs  team.rs  update.rs
client/crates/cli/tests/: signal_shutdown.rs
client/crates/daemon/: Cargo.toml
client/crates/daemon/src/: auth.rs  autostart.rs  cloud.rs  discovery.rs  discovery_loop.rs  docker_events.rs  forwarder.rs  legacy_monitor.rs  lib.rs  notify.rs  protocol_detect.rs  route_table.rs
client/crates/daemon/src/net/: dns.rs  mod.rs  overlay.rs  resolver_config.rs  service_table.rs  stack.rs  tun_device.rs  virtual_ip.rs
client/crates/daemon/tests/: overlay_e2e.rs
client/crates/domain/: Cargo.toml
client/crates/domain/src/: lib.rs
client/crates/tunnel-client/: Cargo.toml
client/crates/tunnel-client/src/: domain_router.rs  lib.rs
docs/: README.md  architecture.md  devenv-tunnel.md  privileges.md  troubleshooting.md
examples/docker-templated-tunnel/: README.md  demo.sh  docker-compose.yml  server.py
examples/local-overlay/: .envrc  README.md  server.py  verify.sh
proto/: Cargo.toml
proto/src/: codec.rs  connection.rs  lib.rs
scripts/: install.sh  set-cli-version.sh
sdks/: README.md
sdks/direnv/: .envrc  README.md  devenv-tunnel-exec
sdks/go/: devenv_tunnel.go  go.mod
sdks/go/examples/: main.go
sdks/node/: README.md  index.d.ts  index.js  package.json
sdks/node/examples/: express-app.js
sdks/python/: README.md  devenv_tunnel.py
sdks/python/examples/: http_server.py
work/: milestone-1.task.md  milestone-2.task.md  task-1.task.md  task-10.task.md  task-11.task.md  task-12.task.md  task-13.task.md  task-14.task.md  task-15.task.md  task-16.task.md  task-17.task.md  task-18.task.md  task-19.task.md  task-2.task.md  task-20.task.md  task-21.task.md  task-22.task.md  task-23.task.md  task-24.task.md  task-25.task.md  task-26.task.md  task-27.task.md  task-28.task.md  task-29.task.md  task-3.task.md  task-30.task.md  task-31.task.md  task-32.task.md  task-33.task.md  task-34.task.md  task-35.task.md  task-36.task.md  task-37.task.md  task-4.task.md  task-5.task.md  task-6.task.md  task-7.task.md  task-8.task.md  task-9.task.md
